Add jobs and simple image diff to send updates

--- a/RefreshBot/appsettings.json
+++ b/RefreshBot/appsettings.json
@@ -1,5 +1,10 @@
 ﻿{
   "Prefix": "!",
-  "Token": "token"
+  "Token": "token",
+  "Page": {
+    "Width": 1440,
+    "Height": 2780, //2880,
+    "DiffThreshold": 0.05
+  }
   //docker inspect bca13fb18220 | grep IPAddress
 }
